--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
         <version>3.0.0-M5</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>Automation with BaseClass/Automation/src/test/resources/testng.xml</suiteXmlFile>
+            <suiteXmlFile>Automation/src/test/resources/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
